feat: add article detail api
